# beads-workers

./: .beads-workers.yaml  .beads-workers.yaml.example  .gitignore  AGENTS.md  CONFIG.md  Cargo.toml  DASHBOARD.md  INSTALL.md  IPC-PROTOCOL.md  LICENSE  METRICS.md  README.md  TEST.md  beads-workers  test-agent-mock  test-result.txt  test-runner.sh
.beads/: config.yaml  issues.jsonl
docs/: configuration.md  worker-client.md
examples/: dashboard_demo.rs  message_format.rs  orchestrator_demo.rs  worker_client.rs  worker_client_demo.rs  worker_main_loop.rs
src/: cli.rs  config.rs  executor.rs  ipc.rs  lib.rs  logs.rs  main.rs  metrics.rs  orchestrator.rs  protocol.rs  scaler.rs  server.rs  status.rs  task_poller.rs  types.rs  ui.rs  worker.rs
tests/: config_integration_test.rs  ipc_integration_tests.rs  task_polling_tests.rs  worker_loop_integration.rs
